# xml-sec

./: .gitattributes  .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  pr
.github/: FUNDING.yml  dependabot.yml
.github/instructions/: code-review.instructions.md  rust.instructions.md
.github/scripts/: test-validate-pr-title.sh  validate-pr-title.sh
.github/workflows/: ci.yml  cleanup-branches.yml  release-plz.yml  release.yml
examples/: encrypt.rs  sign.rs  verify.rs
scripts/: import-donor-fixtures.sh
src/: error.rs  lib.rs
src/c14n/: escape.rs  mod.rs  ns_common.rs  ns_exclusive.rs  ns_inclusive.rs  prefix.rs  serialize.rs  xml_base.rs
src/xmldsig/: builder.rs  digest.rs  keys.rs  mod.rs  mutation.rs  parse.rs  sign.rs  signature.rs  transforms.rs  types.rs  uri.rs  verify.rs  whitespace.rs  x509.rs  xpath.rs
src/xmlenc/: decrypt.rs  encrypt.rs  mod.rs  parse.rs  types.rs
tests/: base64_transform_integration.rs  c14n_golden.rs  c14n_integration.rs  donor_digest_vectors.rs  donor_full_verification_suite.rs  donor_interop_suite.rs  donor_negative_vectors.rs  ecdsa_signature_integration.rs  fixtures_smoke.rs  import_donor_fixtures.rs  reference_integration.rs  rsa_signature_integration.rs  saml_idp_integration.rs  saml_signing_integration.rs  signature_builder.rs  signature_pipeline_integration.rs  signing_digest.rs  transforms_integration.rs  uri_integration.rs  x509_chain_integration.rs  xmlenc_donor_integration.rs  xmlenc_encrypt_integration.rs  xmlenc_encrypt_xmlsec1.rs  xmlsec1_interop.rs  xpath_donor_vectors.rs  xpath_transform_integration.rs
tests/fixtures/c14n/c14n11/: full-doc-c14n11.xml
tests/fixtures/c14n/merlin-c14n-three/: full-doc-c14n11.xml  full-doc-exc-c14n.xml
tests/fixtures/c14n/merlin-exc-c14n-one/: full-doc-c14n10.xml  full-doc-exc-c14n.xml
tests/fixtures/saml/: response_signing_template.xml
tests/fixtures/xmldsig/: README.md
tests/fixtures/xmldsig/aleksey-xmldsig-01/: enveloping-sha256-ecdsa-sha256.tmpl  enveloping-sha384-ecdsa-sha384.tmpl
tests/fixtures/xmldsig/merlin-xmldsig-twenty-three/: signature-enveloped-dsa.xml  signature-enveloping-rsa.xml  signature-x509-crt-crl.xml  signature-x509-crt.xml  signature-x509-is.xml  signature-x509-ski.xml  signature-x509-sn.xml
tests/fixtures/xmldsig/merlin-xpath-filter2/: sign-spec-subset.xml
tests/fixtures/xmldsig/xmldsig11-interop-2012/: signature-enveloping-p256_sha256.xml  signature-enveloping-p384_sha384.xml
tests/fixtures/xmlenc/: README.md
