[package]
name = "xml-sec"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
description = "Pure Rust XML Security: XMLDSig, XMLEnc, C14N. Drop-in replacement for libxmlsec1."
repository = "https://github.com/structured-world/xml-sec"
homepage = "https://github.com/structured-world/xml-sec"
documentation = "https://docs.rs/xml-sec"
keywords = ["xml", "xmldsig", "xmlenc", "c14n", "saml"]
categories = ["cryptography", "web-programming", "authentication"]
readme = "README.md"

[dependencies]
# XML parsing
roxmltree = { version = "0.21", features = ["positions"] }

# Crypto
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
signature = "2"
subtle = "2"

# X.509 certificates
x509-parser = "0.18"
der = "0.8"

# Base64 encoding/decoding
base64 = "0.22"

# Error handling
thiserror = "2"

[features]
default = ["xmldsig", "c14n"]
xmldsig = []           # XML Digital Signatures (sign + verify)
xmlenc = []            # XML Encryption (encrypt + decrypt)
c14n = []              # XML Canonicalization (inclusive + exclusive)
