[package]
name = "xml-sec"
version = "0.1.3"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
description = "Pure Rust XML Security: XMLDSig, XMLEnc, C14N. Drop-in replacement for libxmlsec1."
repository = "https://github.com/structured-world/xml-sec"
homepage = "https://github.com/structured-world/xml-sec"
documentation = "https://docs.rs/xml-sec"
keywords = ["xml", "xmldsig", "xmlenc", "c14n", "saml"]
categories = ["cryptography", "web-programming", "authentication"]
readme = "README.md"

[dependencies]
# XML parsing
roxmltree = { version = "0.21", features = ["positions"] }

# Crypto
rsa = { version = "0.9", optional = true }
sha1 = { version = "0.10", features = ["oid"], optional = true }
sha2 = { version = "0.10", features = ["oid"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
p384 = { version = "0.13", features = ["ecdsa"], optional = true }
p521 = { version = "0.13", features = ["ecdsa"], optional = true }
signature = { version = "2", optional = true }
subtle = { version = "2", optional = true }

# X.509 certificates
x509-parser = { version = "0.18", optional = true }
der = { version = "0.8", optional = true }

# Base64 encoding/decoding
base64 = "0.22"

# Error handling
thiserror = "2"

[features]
default = ["xmldsig", "c14n"]
xmldsig = [            # XML Digital Signatures (sign + verify)
    "dep:der",
    "dep:p256",
    "dep:p384",
    "dep:p521",
    "dep:rsa",
    "dep:sha1",
    "dep:sha2",
    "dep:signature",
    "dep:subtle",
    "dep:x509-parser",
]
xmlenc = []            # XML Encryption (encrypt + decrypt)
c14n = []              # XML Canonicalization (inclusive + exclusive)
