[package]
name = "xml-sec"
version = "0.1.8"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
description = "Pure Rust XML Security: XMLDSig, XMLEnc, C14N. Drop-in replacement for libxmlsec1."
repository = "https://github.com/structured-world/xml-sec"
homepage = "https://github.com/structured-world/xml-sec"
documentation = "https://docs.rs/xml-sec"
keywords = ["xml", "xmldsig", "xmlenc", "c14n", "saml"]
categories = ["cryptography", "web-programming", "authentication"]
readme = "README.md"

[dependencies]
# XML parsing
roxmltree = { version = "0.21", features = ["positions"] }
quick-xml = "0.41"

# Crypto
rsa = { version = "0.10.0-rc.18", optional = true }
sha1 = { version = "0.11", features = ["oid"], optional = true }
sha2 = { version = "0.11", features = ["oid"], optional = true }
p256 = { version = "0.14", features = ["ecdsa"], optional = true }
p384 = { version = "0.14", features = ["ecdsa"], optional = true }
p521 = { version = "0.14", features = ["ecdsa"], optional = true }
signature = { version = "3", optional = true }
subtle = { version = "2", optional = true }
getrandom = { version = "0.4", features = ["sys_rng"], optional = true }
aes = { version = "0.9.1", optional = true }
aes-gcm = { version = "0.11.0", optional = true }
aes-kw = { version = "0.3.1", optional = true }
cbc = { version = "0.2.1", optional = true }

# X.509 certificates
x509-parser = { version = "0.18", features = ["verify"], optional = true }
der = { version = "0.8", optional = true }
crypto-bigint = { version = "0.7", optional = true }

# Base64 encoding/decoding
base64 = "0.22"

# Error handling
thiserror = "2"

[dev-dependencies]
rcgen = "0.14.6"
rand_chacha = "0.10"
time = "0.3.53"

[features]
default = ["xmldsig", "c14n"]
xmldsig = [            # XML Digital Signatures (sign + verify)
    "dep:der",
    "dep:crypto-bigint",
    "dep:getrandom",
    "dep:p256",
    "dep:p384",
    "dep:p521",
    "dep:rsa",
    "dep:sha1",
    "dep:sha2",
    "dep:signature",
    "dep:subtle",
    "dep:x509-parser",
]
xmlenc = [             # XML Encryption (encrypt + decrypt)
    "dep:aes",
    "dep:aes-gcm",
    "dep:aes-kw",
    "dep:cbc",
    "dep:getrandom",
    "dep:rsa",
    "dep:sha1",
    "dep:sha2",
]
c14n = []              # XML Canonicalization (inclusive + exclusive)
